# Simulador-Gestion-Hospitalaria

./: CMakeLists.txt  Makefile  README.md  build.sh
db/: citas.csv  historial-clinico.csv  pacientes.csv
src/: archivos.cpp  citas.cpp  citas.hpp  main.cpp  main.hpp  medicos.cpp  medicos.hpp  pacientes.cpp  pacientes.hpp  reportes.cpp  reportes.hpp
src/db/: citas.csv  historial-clinico.csv  medicos.csv  pacientes.csv
